Use the correct folder name! # 50-character subject line # # 72-character wrapped longer description. This should answer: # # * Why was this change necessary? # * How does it address the problem? # * Are there any side effects? # # Include a link to the ticket, if any.

--- a/app/javascript/app.scss
+++ b/app/javascript/app.scss
@@ -2,5 +2,5 @@ $white: #fff;
 
 body {
   background-color: $white;
-  background-image: url('/dup-images/meme.jpg');
+  background-image: url('./dup-images/meme.jpg');
 }
